Change code to delete the padding left of the menu => passed it from main.css to responsive css to avoid it to collapse on XS

--- a/css/main.css
+++ b/css/main.css
@@ -128,11 +128,6 @@ body {
 }
 /**/
 
-/*code to delete the space at the left of the "Portada" item in the navbar*/
-.container-fluid,
-.navbar-collapse {
-  /*padding-left: 0!important;*/
-}
 
 /*
  *
